c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/struct_decl_missing_end_semicolon.c
struct s {
    int a;
} // a structure declaration must end with a semicolon

int main(void) {
    return 0;
}